app/public/css/layout.css
html{height:100%;}
body{min-height:100%;}

/* Header styles */
#header
{
    border-radius:0px;
    margin:0px;
    position:relative;
    background:none;
}
#bannerBG
{
    position:absolute;
    top:0px;
    right:0px;
    bottom:0px;
    left:0px;
    z-index:-1;
    background-repeat:no-repeat;
    background-position:center center;
    background-image:url(/app/client/images/bridge3.jpg);
    -moz-background-size: cover;
    background-size: cover;                       
}            

/* Nav styles */
#collapsibleNavbar > ul > li > a
{
    text-align: center;
    font-size:110%;
    margin-left:15px;
    margin-right:15px;
}

/* Footer styles */
.fa
{
    font-size: 25px;
    line-height: 40px;
    width:40px;
    text-decoration: none !important;
    color:white !important;
}
.fa:hover
{
    opacity: 0.7;
}
.fa-github{background-color:#334444;}
.fa-facebook{background-color:#3B5998;}
.fa-instagram{background-color:#125688;}
.fa-steam{background-color:#151515;}

